--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-pandas==2.2.0
-numpy==1.26.3
-chess==1.10.0
-python-chess==1.999
-requests==2.31.0
-plotly==5.18.0
-streamlit==1.29.0
-tqdm==4.66.1
+streamlit
+pandas
+numpy
+plotly
+requests
+chess
+python-chess
+tqdm
